update defconfig for panda

--- a/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
+++ b/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120529-r14394"
+CONFIG_KERNELVERSION="devel-20120710-r14678"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -34,6 +34,7 @@ CONFIG_OPT_TARGET_ARCH="arm"
 # CONFIG_TARGET_SUBARCH_armv6 is not set
 CONFIG_TARGET_SUBARCH_armv7=y
 CONFIG_OPT_TARGET_SUBARCH="armv7"
+# CONFIG_TARGET_PLATFORM_arm_armada5xx is not set
 # CONFIG_TARGET_PLATFORM_arm_imx5x is not set
 # CONFIG_TARGET_PLATFORM_arm_imx6 is not set
 # CONFIG_TARGET_PLATFORM_arm_omap3 is not set
@@ -89,8 +90,9 @@ CONFIG_OPTIMIZATIONS_DEFAULT=y
 # CONFIG_COMPRESSION_XZ is not set
 CONFIG_COMPRESSION_GZIP=y
 # CONFIG_OPT_DYNAMIC_SYSROOT is not set
+# CONFIG_OPT_EATMYDATA is not set
 CONFIG_OPT_VERBOSE=y
-CONFIG_OPT_CONCURRENCY_MAKE_LEVEL=8
+CONFIG_OPT_CONCURRENCY_MAKE_LEVEL=2
 # CONFIG_OPT_MIRROR is not set
 # CONFIG_OPT_REPO is not set
 
@@ -113,6 +115,7 @@ CONFIG_OPT_PACKAGE_REPO=y
 CONFIG_KEYMAP_QWERTY=y
 # CONFIG_KEYMAP_AZERTY is not set
 # CONFIG_KEYMAP_QWERTZ is not set
+CONFIG_OPT_SUB_CHARSET="en"
 CONFIG_LOCALE=y
 CONFIG_OPT_INCLUDED_LOCALES="en_US.UTF-8"
 CONFIG_OPT_DEFAULT_LOCALE="en_US.UTF-8"
@@ -138,6 +141,8 @@ CONFIG_USE_xorg=y
 #
 # Graphics Drivers
 #
+# CONFIG_USE_glamo is not set
+CONFIG_USE_omap=y
 
 #
 # Hardware Accelerators
@@ -214,8 +219,8 @@ CONFIG_OPT_FTP_SERVER=y
 # CONFIG_HTTP_SERVER is not set
 CONFIG_OPT_SAMBA=y
 # CONFIG_SAMBA_SERVER is not set
-CONFIG_AUTOMOUNTER_SMB=y
-CONFIG_AUTOMOUNTER_NFS=y
+# CONFIG_AUTOMOUNTER_SMB is not set
+# CONFIG_AUTOMOUNTER_NFS is not set
 # CONFIG_AUTOMOUNTER_9P is not set
 
 #
@@ -244,7 +249,6 @@ CONFIG_PKG_opkg=y
 # CONFIG_PKG_ar6k is not set
 CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_cwiid is not set
-# CONFIG_PKG_dvb-usb-rtl2832u is not set
 # CONFIG_PKG_eventlircd is not set
 # CONFIG_PKG_lirc is not set
 # CONFIG_PKG_s2-liplianin is not set
@@ -338,6 +342,7 @@ CONFIG_PKG_firmware-dvb-xc3028=y
 CONFIG_PKG_firmware-wifi-wilink12xx=y
 # CONFIG_PKG_firmware-wifi-zd1201 is not set
 # CONFIG_PKG_firmware-wifi-zd1211-ar5007 is not set
+# CONFIG_PKG_sysbios-rpmsg is not set
 
 #
 # fonts
@@ -428,6 +433,7 @@ CONFIG_PKG_fribidi=y
 # CONFIG_PKG_gdk-pixbuf is not set
 CONFIG_PKG_gettext=y
 # CONFIG_PKG_glibmm is not set
+CONFIG_PKG_gmp=y
 CONFIG_PKG_gnutls=y
 # CONFIG_PKG_grilo is not set
 # CONFIG_PKG_grilo-plugins is not set
@@ -439,6 +445,7 @@ CONFIG_PKG_gnutls=y
 # CONFIG_PKG_gupnp-igd is not set
 # CONFIG_PKG_hal is not set
 # CONFIG_PKG_hicolor-icon-theme is not set
+CONFIG_PKG_htop=y
 CONFIG_PKG_i18n=y
 # CONFIG_OPT_i18n_fonts is not set
 # CONFIG_PKG_icu4c is not set
@@ -460,6 +467,7 @@ CONFIG_PKG_libaacs=y
 CONFIG_PKG_libass=y
 # CONFIG_PKG_libatasmart is not set
 # CONFIG_PKG_libavc1394 is not set
+# CONFIG_PKG_libbmm is not set
 # CONFIG_PKG_libbridge is not set
 CONFIG_PKG_libcap=y
 # CONFIG_PKG_libcdaudio is not set
@@ -468,8 +476,6 @@ CONFIG_PKG_libcdio=y
 CONFIG_PKG_libcec=y
 # CONFIG_PKG_libcroco is not set
 CONFIG_PKG_libdaemon=y
-CONFIG_PKG_libdce=y
-CONFIG_OPT_libdce_devtools=y
 CONFIG_PKG_libdri2=y
 # CONFIG_PKG_libdvbpsi is not set
 # CONFIG_PKG_libdvdnav is not set
@@ -482,11 +488,12 @@ CONFIG_PKG_libffi=y
 # CONFIG_PKG_libftdi is not set
 # CONFIG_PKG_libg7221 is not set
 CONFIG_PKG_libgcrypt=y
+# CONFIG_PKG_libgles-gc is not set
 CONFIG_PKG_libgpg-error=y
 # CONFIG_PKG_libiconv is not set
 # CONFIG_PKG_libid3tag is not set
 # CONFIG_PKG_libiec61883 is not set
-# CONFIG_PKG_liblockdev is not set
+CONFIG_PKG_liblockdev=y
 CONFIG_PKG_libmad=y
 CONFIG_PKG_libmicrohttpd=y
 CONFIG_PKG_libmms=y
@@ -527,6 +534,7 @@ CONFIG_PKG_libssh=y
 # CONFIG_PKG_libsvg is not set
 # CONFIG_PKG_libtelepathy is not set
 # CONFIG_PKG_libtheora is not set
+# CONFIG_PKG_libtirpc is not set
 CONFIG_PKG_libungif=y
 CONFIG_PKG_libusb=y
 CONFIG_PKG_libusb-compat=y
@@ -539,6 +547,7 @@ CONFIG_PKG_libxml2=y
 # CONFIG_PKG_libyaml is not set
 # CONFIG_PKG_libz160 is not set
 CONFIG_PKG_lzo=y
+# CONFIG_PKG_marvell-ipp is not set
 # CONFIG_PKG_mediastreamer is not set
 CONFIG_PKG_mesa=y
 # CONFIG_OPT_mesa_gallium3d is not set
@@ -546,10 +555,13 @@ CONFIG_PKG_mesa=y
 # CONFIG_OPT_mesa_opengles is not set
 # CONFIG_OPT_mesa_openvg is not set
 # CONFIG_OPT_mesa_xvmc is not set
+# CONFIG_OPT_mesa_wayland is not set
+# CONFIG_PKG_mtdev is not set
 # CONFIG_PKG_mx is not set
 CONFIG_PKG_ncurses=y
 # CONFIG_OPT_ncurses_terminfo is not set
-# CONFIG_PKG_ncursesw is not set
+CONFIG_PKG_ncursesw=y
+CONFIG_PKG_nettle=y
 CONFIG_PKG_openssl=y
 CONFIG_PKG_orc=y
 # CONFIG_PKG_ortp is not set
@@ -591,6 +603,7 @@ CONFIG_PKG_tinyxml=y
 # CONFIG_PKG_tslib is not set
 # CONFIG_PKG_twolame is not set
 CONFIG_PKG_v4l-utils=y
+# CONFIG_PKG_vmeta is not set
 CONFIG_PKG_wavpack=y
 CONFIG_PKG_yajl=y
 CONFIG_PKG_zlib=y
@@ -600,24 +613,37 @@ CONFIG_PKG_zlib=y
 # misc
 #
 # CONFIG_PKG_baresip is not set
+# CONFIG_PKG_cpuburn is not set
 # CONFIG_PKG_elfutils is not set
 # CONFIG_PKG_ethtool is not set
 # CONFIG_PKG_glmark2 is not set
 # CONFIG_PKG_hdmiservice is not set
 # CONFIG_PKG_iioutils is not set
+# CONFIG_PKG_libxkbcommon is not set
 # CONFIG_PKG_linphone is not set
 # CONFIG_PKG_madplay is not set
+# CONFIG_PKG_maliit-framework is not set
+# CONFIG_PKG_maliit-plugins is not set
+# CONFIG_PKG_nbench is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
 # CONFIG_PKG_pvr is not set
 # CONFIG_PKG_rsync is not set
+# CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
+# CONFIG_PKG_wayland is not set
 # CONFIG_PKG_webrtc-audio-processing is not set
+# CONFIG_PKG_weston is not set
 
 #
 # multimedia
 #
-# CONFIG_PKG_GStreamer is not set
+CONFIG_PKG_GStreamer=y
+CONFIG_OPT_GStreamer_xorg=y
+# CONFIG_OPT_GStreamer_openmax is not set
+# CONFIG_OPT_GStreamer_vaapi is not set
+CONFIG_OPT_GStreamer_ducati=y
+# CONFIG_OPT_GStreamer_crystalhd is not set
 # CONFIG_PKG_MPlayer is not set
 # CONFIG_PKG_dvbstreamer is not set
 # CONFIG_PKG_enna is not set
@@ -628,19 +654,29 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_gst-bcmdec is not set
 # CONFIG_PKG_gst-convenience is not set
 # CONFIG_PKG_gst-dsp is not set
-# CONFIG_PKG_gst-ducati is not set
-# CONFIG_PKG_gst-ffmpeg is not set
+CONFIG_PKG_gst-ducati=y
+CONFIG_PKG_gst-ffmpeg=y
 # CONFIG_PKG_gst-omapfb is not set
 # CONFIG_PKG_gst-openmax is not set
-# CONFIG_PKG_gst-plugins-bad is not set
-# CONFIG_PKG_gst-plugins-base is not set
-# CONFIG_PKG_gst-plugins-gl is not set
-# CONFIG_PKG_gst-plugins-good is not set
+CONFIG_PKG_gst-plugins-bad=y
+CONFIG_OPT_gstpluginsbad_xorg=y
+# CONFIG_OPT_gstpluginsbad_pulseaudio is not set
+CONFIG_OPT_gstpluginsbad_sdl=y
+CONFIG_PKG_gst-plugins-base=y
+CONFIG_OPT_gstpluginsbase_xorg=y
+CONFIG_PKG_gst-plugins-gl=y
+CONFIG_PKG_gst-plugins-good=y
+CONFIG_OPT_gstpluginsgood_xorg=y
+# CONFIG_OPT_gstpluginsgood_pulseaudio is not set
+CONFIG_PKG_gst-plugins-ugly=y
 # CONFIG_PKG_gst-vaapi is not set
-# CONFIG_PKG_gstreamer is not set
-# CONFIG_PKG_libav is not set
+CONFIG_PKG_gstreamer=y
+CONFIG_OPT_gstreamer_devtools=y
+CONFIG_PKG_libav=y
+# CONFIG_OPT_libav_vaapi is not set
 CONFIG_PKG_libbluray=y
 CONFIG_OPT_libbluray_aacs=y
+CONFIG_PKG_libdce=y
 # CONFIG_PKG_libdvdcss is not set
 # CONFIG_PKG_libomxil-bellagio is not set
 # CONFIG_PKG_libplayer is not set
@@ -703,6 +739,7 @@ CONFIG_OPT_sgx540OpenGLES_xorg=y
 # CONFIG_PKG_vdr-skinelchi is not set
 # CONFIG_PKG_vdr-skinenigmang is not set
 # CONFIG_PKG_vdr-skinsoppalusikka is not set
+# CONFIG_PKG_vdr-softhddevice is not set
 # CONFIG_PKG_vdr-solitaire is not set
 # CONFIG_PKG_vdr-spider is not set
 # CONFIG_PKG_vdr-streamdev-client is not set
@@ -732,6 +769,7 @@ CONFIG_OPT_xbmc_bluray=y
 CONFIG_OPT_xbmc_rtmp=y
 CONFIG_OPT_xbmc_nonfree=y
 # CONFIG_OPT_xbmc_externalffmpeg is not set
+# CONFIG_OPT_xbmc_externalffmpeglibav is not set
 # CONFIG_OPT_xbmc_pvr is not set
 CONFIG_OPT_xbmc_addons=y
 CONFIG_OPT_xbmc_libcec=y
@@ -739,6 +777,8 @@ CONFIG_OPT_xbmc_libnfs=y
 # CONFIG_OPT_xbmc_afpclient is not set
 # CONFIG_OPT_xbmc_airtunes is not set
 # CONFIG_OPT_xbmc_screensavers is not set
+# CONFIG_OPT_xbmc_dove is not set
+CONFIG_OPT_xbmc_gstreamer=y
 # CONFIG_PKG_xbmc-addon-vdr is not set
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
@@ -749,8 +789,8 @@ CONFIG_OPT_xbmc_libnfs=y
 #
 CONFIG_PKG_amionline=y
 # CONFIG_PKG_automounter-9p is not set
-CONFIG_PKG_automounter-nfs=y
-CONFIG_PKG_automounter-smb=y
+# CONFIG_PKG_automounter-nfs is not set
+# CONFIG_PKG_automounter-smb is not set
 CONFIG_PKG_bftpd=y
 # CONFIG_PKG_bluez is not set
 CONFIG_PKG_connman=y
@@ -770,7 +810,7 @@ CONFIG_PKG_network-backend=y
 CONFIG_PKG_samba-client=y
 # CONFIG_PKG_samba-server is not set
 # CONFIG_PKG_tcpdump is not set
-# CONFIG_PKG_udhcpc is not set
+CONFIG_PKG_udhcpc=y
 CONFIG_PKG_wireless-tools=y
 CONFIG_OPT_wirelesstools_devtools=y
 CONFIG_PKG_wpa-supplicant=y
@@ -947,8 +987,7 @@ CONFIG_OPT_linux_usbnet=y
 CONFIG_OPT_linux_v4l=y
 CONFIG_OPT_linux_wifi=y
 # CONFIG_PKG_llvm is not set
-# CONFIG_PKG_module-init-tools is not set
-# CONFIG_PKG_pciutils is not set
+CONFIG_PKG_pciutils=y
 # CONFIG_PKG_polkit is not set
 # CONFIG_PKG_ralink-8070-3070-3370-5372-usb is not set
 # CONFIG_PKG_snowball-init is not set
@@ -960,7 +999,6 @@ CONFIG_PKG_toolchain=y
 # CONFIG_PKG_uclibc is not set
 # CONFIG_PKG_uclibc-gdb is not set
 # CONFIG_PKG_uclibc-network is not set
-CONFIG_PKG_udev=y
 # CONFIG_PKG_udisks is not set
 CONFIG_PKG_util-linux-ng=y
 
@@ -985,11 +1023,12 @@ CONFIG_PKG_dialog=y
 # CONFIG_PKG_linux-perftools is not set
 # CONFIG_PKG_lsof is not set
 # CONFIG_PKG_nano is not set
+CONFIG_PKG_omapdrmtest=y
 # CONFIG_PKG_oprofile is not set
 CONFIG_PKG_rtmpdump=y
 # CONFIG_PKG_screen is not set
 # CONFIG_PKG_snowball-mactool is not set
-# CONFIG_PKG_strace is not set
+CONFIG_PKG_strace=y
 # CONFIG_PKG_tools-generator is not set
 # CONFIG_PKG_unrar is not set
 CONFIG_PKG_usbutils=y
@@ -1044,7 +1083,10 @@ CONFIG_PKG_mesa-demos=y
 CONFIG_PKG_pixman=y
 # CONFIG_PKG_rxvt is not set
 CONFIG_PKG_setxkbmap=y
-# CONFIG_PKG_xcb-utils is not set
+# CONFIG_PKG_xcb-util is not set
+# CONFIG_PKG_xcb-util-image is not set
+# CONFIG_PKG_xcb-util-keysyms is not set
+# CONFIG_PKG_xcb-util-wm is not set
 # CONFIG_PKG_xcompmgr is not set
 # CONFIG_PKG_xdialog is not set
 CONFIG_PKG_xdpyinfo=y
@@ -1052,6 +1094,7 @@ CONFIG_PKG_xf86-input-evdev=y
 # CONFIG_PKG_xf86-input-synaptics is not set
 # CONFIG_PKG_xf86-video-ati is not set
 # CONFIG_PKG_xf86-video-displaylink is not set
+# CONFIG_PKG_xf86-video-dove is not set
 CONFIG_PKG_xf86-video-fbdev=y
 # CONFIG_PKG_xf86-video-glamo is not set
 # CONFIG_PKG_xf86-video-imx5 is not set
