bcm2708: build bootable kernel image

--- a/packages/linux/build
+++ b/packages/linux/build
@@ -42,7 +42,12 @@ strip_kmods "$kmod_dir" "$debug_dir"
 mkdir -p .install/boot
 case $TARGET_ARCH in
   arm|powepc64)
-    cp arch/$TARGET_ARCH/boot/$IMAGE .install/boot
+    if [ "$TARGET_PLATFORM" = bcm2708 ]; then
+      # add raspberry pi magic
+      cat first32k.bin arch/$TARGET_ARCH/boot/Image > .install/boot/kernel.img
+    else
+      cp arch/$TARGET_ARCH/boot/$IMAGE .install/boot
+    fi
     ;;
   mips|powerpc)
     cp vmlinux .install/boot
